[build-system]
requires=["setuptools", "wheel"]

[project]
name="async-tasks"
description="A simple library for managing asynchrony."
readme="README.md"
authors=[{name="Matt Fowler", email="mattefowler@gmail.com"}]
keywords=["threading", "async"]
classifiers=[
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: Apache-2.0"
]
license="Apache-2.0"
requires-python=">=3.10"
packages=[
    {include="async_task"},
]
[tool.black]
line-length=79
